# ChronoEffector-AI-Agent

./: README.md
.github/workflows/: ci.yml  plugin.yml
agent/: .env.example  package-lock.json  package.json
agent/src/: agent.ts  aleph-actions.ts  aleph-publisher.ts  aleph.ts  config.ts  llm.ts  summarizer.ts  tools.ts  wallet.ts  x402-tracker.ts
agent/src/actions/: basileus.ts
agent/src/actions/limitless/: client.ts  constants.ts  (+3 more)
basileus-agentkit-plugin/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
basileus-agentkit-plugin/src/: agent-loop.ts  aleph-publisher.ts  index.ts  summarizer.ts  tools.ts  types.ts  wallet.ts  x402-tracker.ts
basileus-agentkit-plugin/src/actions/: aleph.ts  constants.ts  index.ts  swap.ts
cli/: README.md  pyproject.toml
cli/basileus/: aleph.py  deploy.py  main.py  ui.py
cli/basileus/chain/: builder_code.py  constants.py  ens.py  erc8004.py  superfluid.py  swap.py  wallet.py
cli/basileus/commands/: deploy.py  register.py  set_content_hash.py  stop.py
cli/basileus/infra/: aleph.py  ssh.py
contracts/: L2Registrar.sol
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: deploy-ipfs.ts
frontend/src/: globals.css  main.tsx
frontend/src/hooks/: useActivities.ts  useAgentPnl.ts  useAgentStatus.ts  useAlephPrice.ts  useLimitlessPositions.ts  useSuperfluid.ts  useTokenTransfers.ts
frontend/src/lib/: aleph.ts  blockscout.ts  contracts.ts  domain.ts  format.ts  superfluid.ts  viem.ts
frontend/src/routes/: __root.tsx  agent.$label.tsx  index.tsx
(+23 files in other folders)
